--- a/layouts/shortcodes/form-contact.html
+++ b/layouts/shortcodes/form-contact.html
@@ -1,6 +1,6 @@
 
 <form
-  action="https://formspree.io/p/1615048538327089110/f/contact"
+  action="https://formspree.io/p/mrgnqggk/f/contact"
   method="POST"
 >
   <label>
