--- a/layouts/shortcodes/form-contact.html
+++ b/layouts/shortcodes/form-contact.html
@@ -1,19 +1,19 @@
 
 <form
-  action="https://formspree.io/p/mrgnqggk/f/contact"
+  action="https://formspree.io/f/mrgnqggk"
   method="POST"
 >
   <label>
-    Your email:
+    Su e-mail:
     <input type="email" name="email" />
   </label>
 
   <label>
-    Your message:
+    El mensaje:
     <textarea name="message"></textarea>
   </label>
 
-  <button type="submit">Send</button>
+  <button type="submit">Enviar</button>
 </form>
 
 <style>
